[project]
name = "inmidradio"
version = "0.1.0"
description = "A Discord bot that streams mp3s from the music folder to a voice channel."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "davey>=0.1.6",
    "discord.py>=2.4",
    "PyNaCl>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
